fixed spacing issues on footer and portfolio

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 footer {
-  margin-top: 20px;
+  margin-top: 50px;
 }
 /* #dropdown-menu {
   margin-left: auto !important
